# karat-kepiting

./: .gitignore  README.md
adder/src/: lib.rs
adder/tests/: integration_test.rs
backyard/src/: gardening_stuff.rs  lib.rs  main.rs
backyard/src/gardening_stuff/: harvest.rs  plant.rs
blog_oop/src/: lib.rs  main.rs
cellection/: Cargo.toml
cellection/src/: main.rs
closure_iterator/src/: lib.rs  main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
defining_an_enum/src/: main.rs
defining_struct/: Cargo.toml
defining_struct/src/: main.rs
enum_match/src/: main.rs
errors/src/: main.rs
fearless_concurrency/src/: main.rs
functions/src/: main.rs
generic_trait_lifetimes/: Cargo.toml
generic_trait_lifetimes/src/: lib.rs  main.rs
guessing_game/src/: main.rs
hello/html/: hello.html
hello/src/: handler.rs  lib.rs  main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
oop/: Cargo.toml
oop/example/src/: main.rs
oop/gui/src/: lib.rs
ownership/src/: main.rs
rectangles/src/: main.rs
references_and_borrowing/src/: main.rs
slice_type/src/: main.rs
smart_pointers/src/: lib.rs  main.rs
variables/src/: main.rs
